# dan

./: .gitattributes  CNAME  DAN.md  HISTORY.md  LIFT.md  README.md  dune  dune-project  index.css  index.htm  index.html  index.pug  kan.pug  main.css  package.json
.github/workflows/: main.yml
doc/: cat.tex  dan.tex  dirtt.txt  higher-groups-ua.txt  higher-structures-ua.txt  kit.txt  termderiv.txt  unification.txt  yoneda-simplicialtt-ua.txt
src/: dirtt.ml  lexer.ml  lexer.mll  main.ml  parser.ml  parser.mli  parser.mly  simplicialtt.ml  simplicity.ml  syntax.ml  ulrik.ml
src/erlang/: mix.exs
src/operational/: README.md  dan-ori.ml  dan.ml  dan_lexer.mll  dan_parser.mly  dan_syntax.ml  derived.ml  dune  lift.ml
src/theoretical/: README.md  dirtt.ml  dune  lexer.mll  main.ml  mike.ml  parser.mly  simplicialtt.ml  syntax.ml  ulrik.ml
